--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                           </div>
                           <div class="price-info">
                               <div class="price-label">Boys/Girls Hostel</div>
-                              <div class="price-value">₹13190</div>
+                              <div class="price-value">₹13,000</div>
                               <div class="price-period">per month</div>
                           </div>
                       </div>
@@ -349,7 +349,7 @@
                         </div>
                         <div class="price-info">
                             <div class="price-label">Boys/Girls Hostel</div>
-                            <div class="price-value">₹11490</div>
+                            <div class="price-value">₹12,000</div>
                             <div class="price-period">per month</div>
                         </div>
                     </div>
@@ -420,7 +420,7 @@
                       </div>
                       <div class="price-info">
                           <div class="price-label">Boys/Girls Hostel</div>
-                          <div class="price-value">₹9890</div>
+                          <div class="price-value">₹10,300</div>
                           <div class="price-period">per month</div>
                       </div>
                   </div>
@@ -465,13 +465,13 @@
                         <div class="dot" data-index="2"></div>
                     </div>
                 </div>
-                <div class="room-type-tag">Aspen House</div>
+                <div class="room-type-tag">Maple House</div>
             </div>
             
             <div class="room-details">
                 <div class="room-header">
                     <div>
-                        <h3 class="room-title">Aspen House</h3>
+                        <h3 class="room-title">Maple House</h3>
                         <div class="room-occupancy">
                           <style>
                             .room-occupancy {
@@ -491,7 +491,7 @@
                     </div>
                     <div class="price-info">
                         <div class="price-label">Boys Hostel</div>
-                        <div class="price-value">₹17700</div>
+                        <div class="price-value">₹18,500</div>
                         <div class="price-period">per month</div>
                     </div>
                 </div>
@@ -562,7 +562,7 @@
                   </div>
                   <div class="price-info">
                       <div class="price-label">Boys Hostel</div>
-                      <div class="price-value">₹13600</div>
+                      <div class="price-value">₹14,500</div>
                       <div class="price-period">per month</div>
                   </div>
               </div>
@@ -633,7 +633,7 @@
                 </div>
                 <div class="price-info">
                     <div class="price-label">Boys Hostel</div>
-                    <div class="price-value">₹11990</div>
+                    <div class="price-value">₹12,500</div>
                     <div class="price-period">per month</div>
                 </div>
             </div>
@@ -704,7 +704,7 @@
               </div>
               <div class="price-info">
                   <div class="price-label">Boys  Hostel</div>
-                  <div class="price-value">₹10500</div>
+                  <div class="price-value">₹11,300</div>
                   <div class="price-period">per month</div>
               </div>
           </div>
